--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <meta name="description" content="Convert microwave cooking times between different wattages.">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=PQNMEPJS38"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'PQNMEPJS38');
+</script>
+
 </head>
 <body>
     <h1>Microwave Wattage Converter</h1>
