--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'PQNMEPJS38');
+  gtag('config', 'G-PQNMEPJS38');
 </script>
 
 </head>
