--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 
 <!DOCTYPE html>
 <html lang="en">
+    <!-- Schema Markup for SEO -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "Microwave Wattage Time Converter",
+  "url": "https://osiris26.github.io/microwave-time-converter/",
+  "applicationCategory": "UtilitiesApplication",
+  "operatingSystem": "All",
+  "description": "Convert microwave cooking times between different wattages like 700W, 900W, and 1000W easily.",
+  "creator": {
+    "@type": "Person",
+    "name": "Jiken"
+  }
+}
+</script>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Microwave Wattage Time Converter</title>
-    <meta name="description" content="Convert microwave cooking times between different wattages.">
+    <title>Microwave Wattage Time Converter | Fast & Simple</title>
+    <meta name="description" content="Convert microwave cooking times between different wattages. Easy tool for 600W, 700W, 900W, and 1000W adjustments. No math needed!">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
 
@@ -19,7 +36,8 @@
 </script>
 
 </head>
-<body>
+<body> 
+    <p>Use this free microwave wattage time converter to adjust your cooking times between different power levels. Whether you’re using a 600W or 1000W microwave, this tool ensures your food is cooked just right.</p>    
     <h1>Microwave Wattage Converter</h1>
     <p>Enter cooking time and wattages to adjust:</p>
     
